css: fix overlap between table and mobile menu

--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,7 @@ tbody tr:nth-child(odd) td {
 table.stickytable thead {
     top: 0;
     position: sticky;
-    z-index: 2;
+    z-index: 1;
 }
 
 
@@ -187,7 +187,7 @@ table.stickytable code[data-tooltip] {
 table.stickytable thead::after {
   content: "";
   position: absolute;
-  z-index: 3;
+  z-index: 2;
   left: 0;
   right: 0;
   bottom: 0;
